--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <httpclient5.version>5.5</httpclient5.version>
         <httpcore5.version>5.3.4</httpcore5.version>
-        <mysql.version>8.3.0</mysql.version>
+        <postgresql.version>42.7.3</postgresql.version>
+        <pgvector.version>0.1.6</pgvector.version>
         <mockito.version>5.12.0</mockito.version>
         <mpj.version>1.4.10</mpj.version>
         <mybatis.plus.version>3.5.10.1</mybatis.plus.version>
@@ -80,6 +81,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- WebFlux 用于 SSE 流式输出 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
@@ -107,18 +113,22 @@
         </dependency>
 
         <!-- Data access -->
+        <!-- PostgreSQL 数据库驱动 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
+        <!-- pgvector 向量数据库支持 -->
+        <dependency>
+            <groupId>com.pgvector</groupId>
+            <artifactId>pgvector</artifactId>
+            <version>${pgvector.version}</version>
+        </dependency>
+        <!-- Redis 缓存 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>${mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -172,17 +182,35 @@
         </dependency>
 
         <!-- AI integrations -->
+        <!-- LangChain4j 核心 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-spring-boot-starter</artifactId>
         </dependency>
+        <!-- OpenAI 模型支持 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
         </dependency>
+        <!-- Azure OpenAI 模型支持 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-azure-open-ai</artifactId>
+        </dependency>
+        <!-- Claude (Anthropic) 模型支持 -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-anthropic</artifactId>
+        </dependency>
+        <!-- Google Gemini 模型支持 -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-google-ai-gemini</artifactId>
+        </dependency>
+        <!-- 本地 Embedding 模型 (all-MiniLM-L6-v2, 维度 384) -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
         </dependency>
 
 
