--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "langchain-core>=0.2.0",
     "langgraph>=1.0.5",
+    "langgraph-checkpoint-redis>=0.1.0",
+    "sentence-transformers>=2.2.0",
 ]
 
 [dependency-groups]
