--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_PORT=8081
 APP_LOG_LEVEL=info
 
 # 数据库配置（PostgreSQL + pgvector）
-DB_HOST=192.168.1.56
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=couple_agent
 DB_USER=postgres
@@ -15,10 +15,10 @@ DB_POOL_SIZE=5
 DB_MAX_OVERFLOW=5
 
 # Redis 配置
-REDIS_HOST=192.168.1.56
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
-REDIS_DB=1
+REDIS_DB=2
 
 # JWT 配置
 JWT_SECRET=couple_agent_secret
