联网/查询重写功能实现

--- a/.env
+++ b/.env
@@ -38,6 +38,10 @@ OSS_REGION=cn-hangzhou
 OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
 OSS_AVATAR= /avatar/默认头像
 
+# 搜索配置
+TAVILY_API_KEY=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
+TAVILY_ENABLED=true 
+
 # 其他
 ENABLE_SSE_STREAMING=true
 ENABLE_WEBSOCKET=true
