--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,10 @@ RAG_ENABLED=true
 RAG_TOP_K=5
 RAG_SIMILARITY_THRESHOLD=0.6
 
+# ============ Tavily 搜索配置 ============
+# TAVILY_API_KEY=your_tavily_api_key
+# TAVILY_ENABLED=false
+
 # ============ OSS 配置 (可选) ============
 # OSS_BUCKET=your_bucket_name
 # OSS_REGION=cn-hangzhou
