--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "langgraph>=1.0.5",
     "langgraph-checkpoint-redis>=0.1.0",
     "sentence-transformers>=2.2.0",
+    "tavily-python>=0.7.17",
 ]
 
 [dependency-groups]
