--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -6,8 +6,8 @@
 # ---------- 构建阶段 ----------
 FROM python:3.12-slim AS builder
 
-# 安装 uv（快速的 Python 包管理器）
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+# 安装 uv（使用 pip 安装避免 ghcr.io 网络问题）
+RUN pip install uv --quiet
 
 WORKDIR /app
 
@@ -27,8 +27,7 @@ COPY --from=builder /app/.venv /app/.venv
 
 # 复制应用代码
 COPY backend/app ./app
-COPY backend/alembic ./alembic
-COPY backend/alembic.ini ./
+COPY backend/migrations ./migrations
 
 # 设置环境变量
 ENV PATH="/app/.venv/bin:$PATH"
