--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "langchain-core>=0.2.0",
     "langgraph>=1.0.5",
-    "langgraph-checkpoint-redis>=0.1.0",
+    "langgraph-checkpoint-postgres>=2.0.0",
+    "psycopg[binary,pool]>=3.1.0",
     "sentence-transformers>=2.2.0",
     "tavily-python>=0.7.17",
 ]
