--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -74,6 +74,9 @@ services:
       - OSS_CUSTOM_DOMAIN=${OSS_CUSTOM_DOMAIN:-}
       - OSS_OBJECT_PREFIX=${OSS_OBJECT_PREFIX:-}
       - OSS_AVATAR=${OSS_AVATAR:-}
+      # 搜索
+      - TAVILY_API_KEY=${TAVILY_API_KEY}
+      - TAVILY_ENABLED=${TAVILY_ENABLED:-true} 
 
       # 功能开关
       - ENABLE_SSE_STREAMING=true
