--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -22,7 +22,10 @@ server {
     
     # API 代理到后端
     location /api/ {
-        proxy_pass http://backend:8080/api/;
+        # 使用 Docker 内置 DNS 解析器，允许动态解析
+        resolver 127.0.0.11 valid=30s;
+        set $backend_upstream http://backend:8080;
+        proxy_pass $backend_upstream$request_uri;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
