--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "langgraph>=1.0.5",
     "langgraph-checkpoint-postgres>=2.0.0",
     "psycopg[binary,pool]>=3.1.0",
-    "sentence-transformers>=2.2.0",
+    "fastembed>=0.4.0",
     "tavily-python>=0.7.17",
 ]
 
@@ -40,14 +40,6 @@ dev = [
 [tool.uv]
 constraint-dependencies = []
 
-# 使用 PyTorch CPU 版本（无 CUDA），大幅减小镜像体积
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
-
-[tool.uv.sources]
-torch = { index = "pytorch-cpu" }
 
 # Ruff 配置 - 代码检查与格式化
 [tool.ruff]
