--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,7 +91,7 @@ services:
     networks:
       - couple-agent-network
     healthcheck:
-      test: [ "CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8080/health')" ]
+      test: [ "CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8080/api/chat/health')" ]
       interval: 30s
       timeout: 10s
       retries: 3
