--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,24 @@ AI_DEEPSEEK_TIMEOUT=30
 # AI_OPENAI_TEMPERATURE=0.7
 # AI_OPENAI_TIMEOUT=30
 
+# ============ AI 提供商选择 ============
+# 可选值: deepseek / openai / gemini / custom
+# AI_PROVIDER=deepseek
+
+# ============ 中转站 API 配置 (使用 Responses API) ============
+# 当 AI_PROVIDER=custom 时生效
+# AI_CUSTOM_API_KEY=your_custom_api_key
+# AI_CUSTOM_BASE_URL=https://your-proxy.example.com/openai
+# AI_CUSTOM_MODEL_NAME=gpt-4
+# AI_CUSTOM_TEMPERATURE=0.7
+# AI_CUSTOM_TIMEOUT=60
+
+# ============ Google Gemini 配置 ============
+# 当 AI_PROVIDER=gemini 时生效
+# AI_GEMINI_API_KEY=your_gemini_api_key
+# AI_GEMINI_MODEL_NAME=gemini-2.0-flash
+# AI_GEMINI_TEMPERATURE=0.7
+
 # ============ Embedding 配置 ============
 # 提供商: local / openai / deepseek
 AI_EMBEDDING_PROVIDER=local
