--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "psycopg[binary,pool]>=3.1.0",
     "fastembed>=0.4.0",
     "tavily-python>=0.7.17",
+    "langchain-google-genai>=4.0.0",
 ]
 
 [dependency-groups]
