refactor:接入了gemini/自建中转站，重构代码

--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,14 @@
 # 复制此文件为 .env 并填入实际值
 # ============================================
 
-# ============ 应用配置 ============
+# ==================== 应用基础 ====================
 APP_ENV=dev
 APP_NAME=couple-agent-py
 APP_HOST=0.0.0.0
 APP_PORT=8080
 APP_LOG_LEVEL=info
 
-# ============ 数据库配置 ============
+# ==================== PostgreSQL 数据库 ====================
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=couple_agent
@@ -20,36 +20,41 @@ DB_PASSWORD=your_password_here
 DB_POOL_SIZE=5
 DB_MAX_OVERFLOW=5
 
-# ============ Redis 配置 ============
+# ==================== Redis 缓存 ====================
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
 
-# ============ JWT 配置 ============
+# ==================== JWT 认证 ====================
 JWT_SECRET=your_jwt_secret_change_in_production
 JWT_EXPIRE_MINUTES=60
 JWT_ISSUER=couple-agent
 
-# ============ AI DeepSeek 配置 ============
+# ==================== AI 提供商选择 ====================
+# 可选值: deepseek / openai / gemini / custom
+AI_PROVIDER=deepseek
+
+# ==================== DeepSeek 配置 ====================
 AI_DEEPSEEK_API_KEY=your_deepseek_api_key
 AI_DEEPSEEK_BASE_URL=https://api.deepseek.com
 AI_DEEPSEEK_MODEL_NAME=deepseek-chat
 AI_DEEPSEEK_TEMPERATURE=0.7
 AI_DEEPSEEK_TIMEOUT=30
 
-# ============ AI OpenAI 配置 (可选) ============
+# ==================== OpenAI 配置 (可选) ====================
 # AI_OPENAI_API_KEY=your_openai_api_key
 # AI_OPENAI_BASE_URL=https://api.openai.com/v1
 # AI_OPENAI_DEPLOYMENT_NAME=gpt-4
 # AI_OPENAI_TEMPERATURE=0.7
 # AI_OPENAI_TIMEOUT=30
 
-# ============ AI 提供商选择 ============
-# 可选值: deepseek / openai / gemini / custom
-# AI_PROVIDER=deepseek
+# ==================== Gemini 配置 (可选) ====================
+# AI_GEMINI_API_KEY=your_gemini_api_key
+# AI_GEMINI_MODEL_NAME=gemini-2.0-flash
+# AI_GEMINI_TEMPERATURE=0.7
 
-# ============ 中转站 API 配置 (使用 Responses API) ============
+# ==================== 自定义中转站 (可选) ====================
 # 当 AI_PROVIDER=custom 时生效
 # AI_CUSTOM_API_KEY=your_custom_api_key
 # AI_CUSTOM_BASE_URL=https://your-proxy.example.com/openai
@@ -57,24 +62,18 @@ AI_DEEPSEEK_TIMEOUT=30
 # AI_CUSTOM_TEMPERATURE=0.7
 # AI_CUSTOM_TIMEOUT=60
 
-# ============ Google Gemini 配置 ============
-# 当 AI_PROVIDER=gemini 时生效
-# AI_GEMINI_API_KEY=your_gemini_api_key
-# AI_GEMINI_MODEL_NAME=gemini-2.0-flash
-# AI_GEMINI_TEMPERATURE=0.7
-
-# ============ Embedding 配置 ============
+# ==================== Embedding 向量化 ====================
 # 提供商: local / openai / deepseek
 AI_EMBEDDING_PROVIDER=local
-# 本地模型使用 BAAI/bge-small-zh-v1.5, 远程可用 text-embedding-3-small
+# 本地: BAAI/bge-small-zh-v1.5, 远程: text-embedding-3-small
 AI_EMBEDDING_MODEL=BAAI/bge-small-zh-v1.5
-# 本地 bge-small-zh: 512, OpenAI text-embedding-3-small: 1536
+# 本地 bge-small-zh: 512, OpenAI: 1536
 AI_EMBEDDING_DIMENSION=512
-# 远程 Embedding API 配置 (仅 provider 非 local 时需要)
+# 远程 API 配置 (仅 provider 非 local 时需要)
 # AI_EMBEDDING_API_KEY=your_embedding_api_key
 # AI_EMBEDDING_BASE_URL=https://api.openai.com/v1
 
-# ============ 对话上下文配置 ============
+# ==================== 对话上下文 & RAG ====================
 CONVERSATION_CACHE_TTL=3600
 CONVERSATION_CACHE_MAX_MESSAGES=20
 MAX_HISTORY_MESSAGES=20
@@ -83,11 +82,11 @@ RAG_ENABLED=true
 RAG_TOP_K=5
 RAG_SIMILARITY_THRESHOLD=0.6
 
-# ============ Tavily 搜索配置 ============
+# ==================== Tavily 搜索 (可选) ====================
 # TAVILY_API_KEY=your_tavily_api_key
 # TAVILY_ENABLED=false
 
-# ============ OSS 配置 (可选) ============
+# ==================== OSS 对象存储 (可选) ====================
 # OSS_BUCKET=your_bucket_name
 # OSS_REGION=cn-hangzhou
 # OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
@@ -95,6 +94,6 @@ RAG_SIMILARITY_THRESHOLD=0.6
 # OSS_OBJECT_PREFIX=couple-agent
 # OSS_AVATAR=default_avatar.png
 
-# ============ 功能开关 ============
+# ==================== 功能开关 ====================
 ENABLE_SSE_STREAMING=true
 ENABLE_WEBSOCKET=true
