refactor():新增阿里云oss文件上传功能

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,8 @@ RAG_SIMILARITY_THRESHOLD=0.6
 # TAVILY_ENABLED=false
 
 # ==================== OSS 对象存储 (可选) ====================
+# OSS_ACCESS_KEY_ID=your_access_key_id
+# OSS_ACCESS_KEY_SECRET=your_access_key_secret
 # OSS_BUCKET=your_bucket_name
 # OSS_REGION=cn-hangzhou
 # OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
