--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -43,7 +43,7 @@ EXPOSE 8080
 
 # 健康检查
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:8080/health')" || exit 1
+    CMD python -c "import httpx; httpx.get('http://localhost:8080/api/chat/health')" || exit 1
 
 # 启动命令
 CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
