--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 
 # ==================== 应用基础 ====================
 APP_ENV=dev
-APP_NAME=couple-agent-py
+APP_NAME=my-agent-py
 APP_HOST=0.0.0.0
 APP_PORT=8080
 APP_LOG_LEVEL=info
@@ -14,7 +14,7 @@ APP_LOG_LEVEL=info
 # ==================== PostgreSQL 数据库 ====================
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=couple_agent
+DB_NAME=my_agent
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 DB_POOL_SIZE=5
@@ -29,7 +29,7 @@ REDIS_DB=0
 # ==================== JWT 认证 ====================
 JWT_SECRET=your_jwt_secret_change_in_production
 JWT_EXPIRE_MINUTES=60
-JWT_ISSUER=couple-agent
+JWT_ISSUER=my-agent
 
 # ==================== AI 提供商选择 ====================
 # 可选值: deepseek / openai / gemini / custom
@@ -93,7 +93,7 @@ RAG_SIMILARITY_THRESHOLD=0.6
 # OSS_REGION=cn-hangzhou
 # OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
 # OSS_CUSTOM_DOMAIN=your_custom_domain
-# OSS_OBJECT_PREFIX=couple-agent
+# OSS_OBJECT_PREFIX=my-agent
 # OSS_AVATAR=default_avatar.png
 
 # ==================== 功能开关 ====================
