refactor():前端优化，后端日志格式优化，pg时区修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,8 @@ services:
       - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-123456}
       - POSTGRES_DB=${DB_NAME:-my_agent}
+      - TZ=Asia/Shanghai
+      - PGTZ=Asia/Shanghai
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
