--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "react-syntax-highlighter": "^16.1.0",
     "react-window": "^2.2.3",
     "react-window-infinite-loader": "^2.0.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
