--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,8 +18,8 @@ dependencies = [
     "httpx>=0.27.0",
     "python-multipart>=0.0.9",
     "alembic>=1.13.1",
+    "langchain>=0.3.0",
     "langchain-openai>=0.2.0",
-    "langchain-core>=0.2.0",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-postgres>=2.0.0",
     "psycopg[binary,pool]>=3.1.0",
@@ -28,6 +28,7 @@ dependencies = [
     "langchain-google-genai>=4.0.0",
     "loguru>=0.7.3",
     "alibabacloud-oss-v2>=1.2.2",
+    "langfuse>=2.0.0",
 ]
 
 [dependency-groups]
