--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,16 @@ dependencies = [
     "loguru>=0.7.3",
     "alibabacloud-oss-v2>=1.2.2",
     "langfuse>=2.0.0",
+    # 知识库功能依赖
+    "pypdf>=4.0.0",           # PDF 解析
+    "python-docx>=1.1.0",     # Word 文档解析
+    "docx2txt>=0.8",          # LangChain Docx2txtLoader 依赖
+    "rank-bm25>=0.2.2",       # BM25 关键词检索
+    "jieba>=0.42.1",          # 中文分词
+    "langchain-community>=0.3.0",  # 社区 DocumentLoaders
+    "langchain-text-splitters>=0.3.0",  # 文本分块器
+    # Celery 消息队列
+    "celery[redis]>=5.4.0",
 ]
 
 [dependency-groups]
