--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,31 +41,13 @@ services:
       - JWT_EXPIRE_MINUTES=60
       - JWT_ISSUER=${JWT_ISSUER:-my-agent}
 
-      # ==================== AI 提供商选择 ====================
-      - AI_PROVIDER=${AI_PROVIDER:-deepseek}
-
-      # ==================== DeepSeek 配置 ====================
+      # ==================== DeepSeek 配置（系统默认模型） ====================
+      # 其他提供商通过用户自定义模型功能配置
       - AI_DEEPSEEK_API_KEY=${AI_DEEPSEEK_API_KEY}
       - AI_DEEPSEEK_BASE_URL=${AI_DEEPSEEK_BASE_URL:-https://api.deepseek.com}
       - AI_DEEPSEEK_MODEL_NAME=${AI_DEEPSEEK_MODEL_NAME:-deepseek-chat}
       - AI_DEEPSEEK_TEMPERATURE=${AI_DEEPSEEK_TEMPERATURE:-0.7}
       - AI_DEEPSEEK_TIMEOUT=${AI_DEEPSEEK_TIMEOUT:-30}
-
-      # ==================== OpenAI 配置 ====================
-      - AI_OPENAI_API_KEY=${AI_OPENAI_API_KEY:-}
-      - AI_OPENAI_BASE_URL=${AI_OPENAI_BASE_URL:-https://api.openai.com/v1}
-
-      # ==================== Gemini 配置 ====================
-      - AI_GEMINI_API_KEY=${AI_GEMINI_API_KEY:-}
-      - AI_GEMINI_MODEL_NAME=${AI_GEMINI_MODEL_NAME:-gemini-2.0-flash}
-      - AI_GEMINI_TEMPERATURE=${AI_GEMINI_TEMPERATURE:-0.7}
-
-      # ==================== 自定义中转站 ====================
-      - AI_CUSTOM_API_KEY=${AI_CUSTOM_API_KEY:-}
-      - AI_CUSTOM_BASE_URL=${AI_CUSTOM_BASE_URL:-}
-      - AI_CUSTOM_MODEL_NAME=${AI_CUSTOM_MODEL_NAME:-gpt-4}
-      - AI_CUSTOM_TEMPERATURE=${AI_CUSTOM_TEMPERATURE:-0.7}
-      - AI_CUSTOM_TIMEOUT=${AI_CUSTOM_TIMEOUT:-60}
 
       # ==================== Embedding 向量化 ====================
       - AI_EMBEDDING_PROVIDER=${AI_EMBEDDING_PROVIDER:-local}
@@ -79,13 +61,11 @@ services:
       - CONVERSATION_CACHE_MAX_MESSAGES=${CONVERSATION_CACHE_MAX_MESSAGES:-20}
       - MAX_HISTORY_MESSAGES=${MAX_HISTORY_MESSAGES:-20}
       - MAX_HISTORY_TOKENS=${MAX_HISTORY_TOKENS:-4000}
-      - RAG_ENABLED=${RAG_ENABLED:-true}
       - RAG_TOP_K=${RAG_TOP_K:-5}
       - RAG_SIMILARITY_THRESHOLD=${RAG_SIMILARITY_THRESHOLD:-0.6}
 
       # ==================== Tavily 搜索 ====================
       - TAVILY_API_KEY=${TAVILY_API_KEY}
-      - TAVILY_ENABLED=${TAVILY_ENABLED:-true}
 
       # ==================== OSS 对象存储 ====================
       - OSS_ACCESS_KEY_ID=${OSS_ACCESS_KEY_ID}
@@ -95,11 +75,6 @@ services:
       - OSS_ENDPOINT=${OSS_ENDPOINT:-}
       - OSS_CUSTOM_DOMAIN=${OSS_CUSTOM_DOMAIN:-}
       - OSS_OBJECT_PREFIX=${OSS_OBJECT_PREFIX:-}
-      - OSS_AVATAR=${OSS_AVATAR:-}
-
-      # ==================== 功能开关 ====================
-      - ENABLE_SSE_STREAMING=true
-      - ENABLE_WEBSOCKET=true
     labels:
       # Watchtower 标签 - 启用自动更新
       - "com.centurylinklabs.watchtower.enable=true"
