--- a/.env.example
+++ b/.env.example
@@ -31,36 +31,13 @@ JWT_SECRET=your_jwt_secret_change_in_production
 JWT_EXPIRE_MINUTES=60
 JWT_ISSUER=my-agent
 
-# ==================== AI 提供商选择 ====================
-# 可选值: deepseek / openai / gemini / custom
-AI_PROVIDER=deepseek
-
-# ==================== DeepSeek 配置 ====================
+# ==================== DeepSeek 配置（系统默认模型） ====================
+# 其他提供商通过用户自定义模型功能配置
 AI_DEEPSEEK_API_KEY=your_deepseek_api_key
 AI_DEEPSEEK_BASE_URL=https://api.deepseek.com
 AI_DEEPSEEK_MODEL_NAME=deepseek-chat
 AI_DEEPSEEK_TEMPERATURE=0.7
 AI_DEEPSEEK_TIMEOUT=30
-
-# ==================== OpenAI 配置 (可选) ====================
-# AI_OPENAI_API_KEY=your_openai_api_key
-# AI_OPENAI_BASE_URL=https://api.openai.com/v1
-# AI_OPENAI_DEPLOYMENT_NAME=gpt-4
-# AI_OPENAI_TEMPERATURE=0.7
-# AI_OPENAI_TIMEOUT=30
-
-# ==================== Gemini 配置 (可选) ====================
-# AI_GEMINI_API_KEY=your_gemini_api_key
-# AI_GEMINI_MODEL_NAME=gemini-2.0-flash
-# AI_GEMINI_TEMPERATURE=0.7
-
-# ==================== 自定义中转站 (可选) ====================
-# 当 AI_PROVIDER=custom 时生效
-# AI_CUSTOM_API_KEY=your_custom_api_key
-# AI_CUSTOM_BASE_URL=https://your-proxy.example.com/openai
-# AI_CUSTOM_MODEL_NAME=gpt-4
-# AI_CUSTOM_TEMPERATURE=0.7
-# AI_CUSTOM_TIMEOUT=60
 
 # ==================== Embedding 向量化 ====================
 # 提供商: local / openai / deepseek
@@ -78,13 +55,11 @@ CONVERSATION_CACHE_TTL=3600
 CONVERSATION_CACHE_MAX_MESSAGES=20
 MAX_HISTORY_MESSAGES=20
 MAX_HISTORY_TOKENS=4000
-RAG_ENABLED=true
 RAG_TOP_K=5
 RAG_SIMILARITY_THRESHOLD=0.6
 
 # ==================== Tavily 搜索 (可选) ====================
 # TAVILY_API_KEY=your_tavily_api_key
-# TAVILY_ENABLED=false
 
 # ==================== OSS 对象存储 (可选) ====================
 # OSS_ACCESS_KEY_ID=your_access_key_id
@@ -96,6 +71,3 @@ RAG_SIMILARITY_THRESHOLD=0.6
 # OSS_OBJECT_PREFIX=my-agent
 # OSS_AVATAR=default_avatar.png
 
-# ==================== 功能开关 ====================
-ENABLE_SSE_STREAMING=true
-ENABLE_WEBSOCKET=true
