--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,31 +42,13 @@ services:
       - JWT_EXPIRE_MINUTES=${JWT_EXPIRE_MINUTES:-60}
       - JWT_ISSUER=${JWT_ISSUER:-my-agent}
 
-      # ==================== AI 提供商选择 ====================
-      - AI_PROVIDER=${AI_PROVIDER:-deepseek}
-
-      # ==================== DeepSeek 配置 ====================
+      # ==================== DeepSeek 配置（系统默认模型） ====================
+      # 其他提供商通过用户自定义模型功能配置
       - AI_DEEPSEEK_API_KEY=${AI_DEEPSEEK_API_KEY}
       - AI_DEEPSEEK_BASE_URL=${AI_DEEPSEEK_BASE_URL:-https://api.deepseek.com}
       - AI_DEEPSEEK_MODEL_NAME=${AI_DEEPSEEK_MODEL_NAME:-deepseek-chat}
       - AI_DEEPSEEK_TEMPERATURE=${AI_DEEPSEEK_TEMPERATURE:-0.7}
       - AI_DEEPSEEK_TIMEOUT=${AI_DEEPSEEK_TIMEOUT:-30}
-
-      # ==================== OpenAI 配置 ====================
-      - AI_OPENAI_API_KEY=${AI_OPENAI_API_KEY:-}
-      - AI_OPENAI_BASE_URL=${AI_OPENAI_BASE_URL:-https://api.openai.com/v1}
-
-      # ==================== Gemini 配置 ====================
-      - AI_GEMINI_API_KEY=${AI_GEMINI_API_KEY:-}
-      - AI_GEMINI_MODEL_NAME=${AI_GEMINI_MODEL_NAME:-gemini-2.0-flash}
-      - AI_GEMINI_TEMPERATURE=${AI_GEMINI_TEMPERATURE:-0.7}
-
-      # ==================== 自定义中转站 ====================
-      - AI_CUSTOM_API_KEY=${AI_CUSTOM_API_KEY:-}
-      - AI_CUSTOM_BASE_URL=${AI_CUSTOM_BASE_URL:-}
-      - AI_CUSTOM_MODEL_NAME=${AI_CUSTOM_MODEL_NAME:-gpt-5.1-codex-max}
-      - AI_CUSTOM_TEMPERATURE=${AI_CUSTOM_TEMPERATURE:-0.7}
-      - AI_CUSTOM_TIMEOUT=${AI_CUSTOM_TIMEOUT:-60}
 
       # ==================== Embedding 向量化 ====================
       - AI_EMBEDDING_PROVIDER=${AI_EMBEDDING_PROVIDER:-local}
@@ -80,13 +62,11 @@ services:
       - CONVERSATION_CACHE_MAX_MESSAGES=${CONVERSATION_CACHE_MAX_MESSAGES:-20}
       - MAX_HISTORY_MESSAGES=${MAX_HISTORY_MESSAGES:-20}
       - MAX_HISTORY_TOKENS=${MAX_HISTORY_TOKENS:-4000}
-      - RAG_ENABLED=${RAG_ENABLED:-true}
       - RAG_TOP_K=${RAG_TOP_K:-5}
       - RAG_SIMILARITY_THRESHOLD=${RAG_SIMILARITY_THRESHOLD:-0.6}
 
       # ==================== Tavily 搜索 ====================
       - TAVILY_API_KEY=${TAVILY_API_KEY}
-      - TAVILY_ENABLED=${TAVILY_ENABLED:-true}
 
       # ==================== OSS 对象存储 ====================
       - OSS_ACCESS_KEY_ID=${OSS_ACCESS_KEY_ID}
@@ -102,10 +82,6 @@ services:
       - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY:-}
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY:-}
       - LANGFUSE_HOST=${LANGFUSE_HOST:-https://cloud.langfuse.com}
-
-      # ==================== 功能开关 ====================
-      - ENABLE_SSE_STREAMING=${ENABLE_SSE_STREAMING:-true}
-      - ENABLE_WEBSOCKET=${ENABLE_WEBSOCKET:-true}
     depends_on:
       postgres:
         condition: service_healthy
